--- a/lab_2/lab2template.html
+++ b/lab_2/lab2template.html
@@ -13,13 +13,13 @@
     <div>
         <ul>
             <li> <a href ="#"> Home </a></li>
-            <li><a hfre  ="#">About</a></li>
+            <li><a hfre  ="##">About</a></li>
             <li><a href  ="#">RGYou</a></a></li>
             <li><a href  ="#">Staff & current students</a></a></li>
             <li><a href  ="#">A to Z</a></li>
         </ul>
     </div>
-    
+
     </header>
     <!-- Start of header -->
 
